force-app/main/default/objects/Fulfilment__c/Fulfilment__c.object-meta.xml
<CustomObject>
    <description>An object to store the progress of fulfilling recommendations</description>
    <label>Fulfilment</label>
    <nameField>
        <displayFormat>Flfl-{0000000}</displayFormat>
        <label>Fulfilment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfilments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>