force-app/main/default/objects/Fulfilment__c/fields/AdditionalAmlStatus__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAmlStatus__c</fullName>
    <description>Used to track any additional AML requirements needed for this fulfilment</description>
    <label>Additional AML Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>