force-app/main/default/objects/Fulfilment__c/fields/AdditionalBankDetailsStatus__c.field-meta.xml
<CustomField>
    <fullName>AdditionalBankDetailsStatus__c</fullName>
    <description>Unused. 
The status of any additional bank details required for this fulfilment</description>
    <label>Employer bank details status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Awaiting</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>