force-app/main/default/objects/Fulfilment__c/fields/Advice__c.field-meta.xml
<CustomField>
    <fullName>Advice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The advice that the recommendation this is fulfilling was associated to</description>
    <label>Advice</label>
    <referenceTo>Advice__c</referenceTo>
    <relationshipLabel>Fulfilments</relationshipLabel>
    <relationshipName>Fulfilments</relationshipName>
    <type>Lookup</type>
</CustomField>