force-app/main/default/objects/Fulfilment__c/fields/AmountDiscrepancyExplanation__c.field-meta.xml
<CustomField>
    <fullName>AmountDiscrepancyExplanation__c</fullName>
    <description>Field to store a reason, if applicable, as to why the difference in expected and received amounts was more than 10%</description>
    <label>Amount discrepancy explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>