force-app/main/default/objects/Fulfilment__c/fields/BankDetailStatus__c.field-meta.xml
<CustomField>
    <fullName>BankDetailStatus__c</fullName>
    <formula>IF(  CONTAINS( Recommendation__r.ProductName__c , &quot;Junior&quot;), 
  IF(  ISPICKVAL(Recommendation__r.RegisteredContact__r.BankDetailsStatus__c, &quot;Submitted&quot;), 
    &quot;Received&quot;, 
    &quot;To be requested&quot;  ),
  IF(  ISBLANK(Recommendation__r.JointOwner__c), 
    IF( ISPICKVAL( Recommendation__r.PrimaryOwner__r.BankDetailsStatus__c , &quot;Submitted&quot;), 
      &quot;Received&quot;, 
      &quot;To be requested&quot;) , 
    IF( ISPICKVAL( Recommendation__r.PrimaryOwner__r.BankDetailsStatus__c , &quot;Submitted&quot;) &amp;&amp; ISPICKVAL( Recommendation__r.JointOwner__r.BankDetailsStatus__c , &quot;Submitted&quot;), 
      &quot;Received&quot;, 
      &quot;To be requested&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank details status</label>
    <type>Text</type>
</CustomField>