force-app/main/default/objects/Fulfilment__c/fields/CancellationNotes__c.field-meta.xml
<CustomField>
    <fullName>CancellationNotes__c</fullName>
    <description>Further details on the reason for the cancellation of this fulfilment</description>
    <label>Cancellation notes</label>
    <type>TextArea</type>
</CustomField>