force-app/main/default/objects/Fulfilment__c/fields/CancellationNoticeSent__c.field-meta.xml
<CustomField>
    <fullName>CancellationNoticeSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records whether a cancellation notice email has been sent</description>
    <label>Cancellation notice sent</label>
    <type>Checkbox</type>
</CustomField>