force-app/main/default/objects/Fulfilment__c/fields/CheckedBy__c.field-meta.xml
<CustomField>
    <fullName>CheckedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who did the investment checks for this fulfilment</description>
    <label>Checked by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CheckedFulfilments</relationshipName>
    <type>Lookup</type>
</CustomField>