force-app/main/default/objects/Fulfilment__c/fields/DataErrorsNeedingResolving__c.field-meta.xml
<CustomField>
    <fullName>DataErrorsNeedingResolving__c</fullName>
    <label>Data errors needing resolving</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-standard fulfilment</fullName>
            </value>
            <value>
                <fullName>No value received</fullName>
            </value>
            <value>
                <fullName>Missing bonus</fullName>
            </value>
            <value>
                <fullName>Increase to salary sacrifice</fullName>
            </value>
            <value>
                <fullName>Redirect employer regular</fullName>
            </value>
            <value>
                <fullName>Sell your BP shares</fullName>
            </value>
            <value>
                <fullName>Gifting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>