force-app/main/default/objects/Fulfilment__c/fields/DateFundsLeftSource__c.field-meta.xml
<CustomField>
    <fullName>DateFundsLeftSource__c</fullName>
    <description>Applicable to withdrawals, this is the day the funds left the source product, as opposed to the day the client received those funds</description>
    <label>Date funds left source</label>
    <type>Date</type>
</CustomField>