force-app/main/default/objects/Fulfilment__c/fields/DateFundsReceived__c.field-meta.xml
<CustomField>
    <fullName>DateFundsReceived__c</fullName>
    <description>The date that funds for this fulfilment are received</description>
    <label>Date funds received</label>
    <type>Date</type>
</CustomField>