force-app/main/default/objects/Fulfilment__c/fields/DateOfAllotment__c.field-meta.xml
<CustomField>
    <fullName>DateOfAllotment__c</fullName>
    <description>The date which shares are allotted</description>
    <label>Date of allotment</label>
    <type>Date</type>
</CustomField>