force-app/main/default/objects/Fulfilment__c/fields/DateSubmitted__c.field-meta.xml
<CustomField>
    <fullName>DateSubmitted__c</fullName>
    <description>The date the fulfilment is submitted</description>
    <label>Date submitted</label>
    <type>Date</type>
</CustomField>