force-app/main/default/objects/Fulfilment__c/fields/EmployerAmlStatus__c.field-meta.xml
<CustomField>
    <fullName>EmployerAmlStatus__c</fullName>
    <description>Indicates the AML status of the employment linked to this fulfilment</description>
    <formula>IF( ISBLANK( Recommendation__r.Employment__c ), &quot;Not required&quot;, TEXT(Recommendation__r.Employment__r.AmlStatus__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer AML Status</label>
    <type>Text</type>
</CustomField>