force-app/main/default/objects/Fulfilment__c/fields/EmployerBankAccountStatus__c.field-meta.xml
<CustomField>
    <fullName>EmployerBankAccountStatus__c</fullName>
    <description>Indicates the bank account status of the employment related to this fulfilment</description>
    <formula>IF( ISBLANK( Recommendation__r.Employment__c ), &quot;Not required&quot;, TEXT(Recommendation__r.Employment__r.BankAccountStatus__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer bank account status</label>
    <type>Text</type>
</CustomField>