force-app/main/default/objects/Fulfilment__c/fields/FulfilmentType__c.field-meta.xml
<CustomField>
    <fullName>FulfilmentType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The fulfilment process associated with this piece of fuflilment</description>
    <label>Fulfilment Type</label>
    <referenceTo>FulfilmentType__c</referenceTo>
    <relationshipLabel>Fulfilments</relationshipLabel>
    <relationshipName>Fulfilments</relationshipName>
    <type>Lookup</type>
</CustomField>