force-app/main/default/objects/Fulfilment__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The household that this fulfilment is related to</description>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fulfilments</relationshipLabel>
    <relationshipName>Fulfilments</relationshipName>
    <type>Lookup</type>
</CustomField>