force-app/main/default/objects/Fulfilment__c/fields/ImportantNotes__c.field-meta.xml
<CustomField>
    <fullName>ImportantNotes__c</fullName>
    <description>For specialists to record notes which cannot be missed for anyone who picks up tasks on this fulfilment</description>
    <label>Important notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>