force-app/main/default/objects/Fulfilment__c/fields/IsThisAConversionFromV1__c.field-meta.xml
<CustomField>
    <fullName>IsThisAConversionFromV1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused.
TEMPORARY - used to indicate whether this fulfilment was created as result of converting apiece of version 1 fulfilment This field should be removed once we&apos;re happy nothing went wrong with that conversion.</description>
    <label>Is this a conversion from v1?</label>
    <type>Checkbox</type>
</CustomField>