force-app/main/default/objects/Fulfilment__c/fields/LegacyFulfilment__c.field-meta.xml
<CustomField>
    <fullName>LegacyFulfilment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Temporary field to record which legacy fulfilment record that this record replaced</description>
    <label>Legacy fulfilment</label>
    <referenceTo>Fulfillment__c</referenceTo>
    <relationshipLabel>New fulfilments</relationshipLabel>
    <relationshipName>V2Fulfilment</relationshipName>
    <type>Lookup</type>
</CustomField>