force-app/main/default/objects/Fulfilment__c/fields/NovaId__c.field-meta.xml
<CustomField>
    <fullName>NovaId__c</fullName>
    <description>Field for uniquely identifying records. May contain production Salesforce Id or a UUID</description>
    <externalId>true</externalId>
    <label>Nova Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>