force-app/main/default/objects/Fulfilment__c/fields/PlatformTicketReference__c.field-meta.xml
<CustomField>
    <fullName>PlatformTicketReference__c</fullName>
    <description>A field to store references to tickets that have been raised with our platform in the course of this fuflilment</description>
    <inlineHelpText>Please include full links to tickets</inlineHelpText>
    <label>Hubwise ticket numbers</label>
    <type>TextArea</type>
</CustomField>