force-app/main/default/objects/Fulfilment__c/fields/ReasonForCancellation__c.field-meta.xml
<CustomField>
    <fullName>ReasonForCancellation__c</fullName>
    <description>The broad reason for cancelling this fulfilment</description>
    <label>Reason for cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process was too complicated/long</fullName>
            </value>
            <value>
                <fullName>Client wanted to retain funds</fullName>
            </value>
            <value>
                <fullName>No longer able to serve client</fullName>
            </value>
            <value>
                <fullName>Customer offboarding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>