force-app/main/default/objects/Fulfilment__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The recommendation which resulted in this fulfilment</description>
    <label>Recommendation</label>
    <referenceTo>Recommendation__c</referenceTo>
    <relationshipLabel>Fulfilments</relationshipLabel>
    <relationshipName>Fulfilments</relationshipName>
    <type>Lookup</type>
</CustomField>