force-app/main/default/objects/Fulfilment__c/fields/ResidualCash__c.field-meta.xml
<CustomField>
    <fullName>ResidualCash__c</fullName>
    <description>Indicates whether residual cash was left behind after a transfer and, if so, where we are with receiving it from the ceding provider.</description>
    <label>Residual cash</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>AWAITING</fullName>
                <label>Awaiting</label>
            </value>
            <value>
                <fullName>RECEIVED</fullName>
                <label>Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>