force-app/main/default/objects/Fulfilment__c/fields/Source_Legacy_RTID__c.field-meta.xml
<CustomField>
    <fullName>Source_Legacy_RTID__c</fullName>
    <formula>Recommendation__r.SourceLegacy__r.RecordType.Name &amp; &quot; | Dest: &quot; &amp; Recommendation__r.DestinationLegacy__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Legacy RTID</label>
    <type>Text</type>
</CustomField>