force-app/main/default/objects/Fulfilment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Used to describe at what stage in the process this piece of fulfilment is in</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Awaiting pre-requisites</fullName>
            </value>
            <value>
                <fullName>Awaiting ad hoc action</fullName>
            </value>
            <value>
                <fullName>Submit fulfilment</fullName>
            </value>
            <value>
                <fullName>Chase client payment</fullName>
            </value>
            <value>
                <fullName>Chase transfer</fullName>
            </value>
            <value>
                <fullName>Chase provider</fullName>
            </value>
            <value>
                <fullName>Chase client action</fullName>
            </value>
            <value>
                <fullName>Await first regular</fullName>
            </value>
            <value>
                <fullName>Investment checks</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Awaiting bank details</fullName>
                <isActive>false</isActive>
                <label>Awaiting bank details</label>
            </value>
            <value>
                <fullName>Awaiting client payment</fullName>
                <isActive>false</isActive>
                <label>Awaiting client payment</label>
            </value>
            <value>
                <fullName>Awaiting client signature</fullName>
                <isActive>false</isActive>
                <label>Awaiting client signature</label>
            </value>
            <value>
                <fullName>Awaiting form processing</fullName>
                <isActive>false</isActive>
                <label>Awaiting form processing</label>
            </value>
            <value>
                <fullName>Awaiting pre-requisite fulfilment</fullName>
                <isActive>false</isActive>
                <label>Awaiting pre-requisite fulfilment</label>
            </value>
            <value>
                <fullName>Awaiting transfer</fullName>
                <isActive>false</isActive>
                <label>Awaiting transfer</label>
            </value>
            <value>
                <fullName>Ready for submission</fullName>
                <isActive>false</isActive>
                <label>Ready for submission</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>