force-app/main/default/objects/Fulfilment__c/fields/SubmittedBy__c.field-meta.xml
<CustomField>
    <fullName>SubmittedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who submitted this piece of fulfilment</description>
    <label>Submitted by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fulfilments</relationshipName>
    <type>Lookup</type>
</CustomField>