force-app/main/default/objects/Fulfilment__c/fields/TasksAuditLog__c.field-meta.xml
<CustomField>
    <fullName>TasksAuditLog__c</fullName>
    <description>Used to record who ticked which tasks</description>
    <label>Tasks audit log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>