force-app/main/default/objects/Fulfilment__c/fields/TransferFormsStatus__c.field-meta.xml
<CustomField>
    <fullName>TransferFormsStatus__c</fullName>
    <description>The status of any transfer forms required for this piece of fulfilment</description>
    <label>Transfer forms status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>To be sent</fullName>
            </value>
            <value>
                <fullName>Awaiting client signature</fullName>
            </value>
            <value>
                <fullName>In the post to us</fullName>
            </value>
            <value>
                <fullName>Signed and saved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>