force-app/main/default/objects/Fulfilment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SearchName__c</columns>
    <columns>Status__c</columns>
    <columns>Recommendation__c</columns>
    <columns>Household__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>